# miniCTK

./: .gitignore  CMakeLists.txt  README
CMake/: CTKConfig.cmake.in  ctkBlockCheckDependencies.cmake  ctkMacroSetupQt.cmake  mitkFunctionCreateBlueBerryApplication.cmake  mitkFunctionCreatePlugin.cmake  mitkFunctionCreateProvisioningFile.cmake
CMakeExternals/: CppMicroServices.cmake  itkCommon.cmake  mbilog.cmake  mitkCore.cmake  qtsingleapplication.cmake
Libs/AppUtil/: CMakeLists.txt  files.cmake  mitkBaseApplication.cpp  target_libraries.cmake
Libs/AppUtil/src/: mitkBaseApplication.cpp
Libs/PluginFramework/: CMakeLists.txt
Libs/Widgets/: CMakeLists.txt  files.cmake
Plugins/org.blueberry.core.commands/: CMakeLists.txt  target_libraries.cmake
Plugins/org.blueberry.core.expressions/: CMakeLists.txt  files.cmake  target_libraries.cmake
Plugins/org.blueberry.core.runtime/: CMakeLists.txt
Plugins/org.blueberry.ui.qt/: target_libraries.cmake
Plugins/org.blueberry.ui.qt.help/: CMakeLists.txt  target_libraries.cmake
Plugins/org.blueberry.ui.qt.log/: CMakeLists.txt  target_libraries.cmake
Plugins/org.blueberry.ui.qt.objectinspector/: CMakeLists.txt  files.cmake  target_libraries.cmake
Plugins/org.commontk.configadmin/: CMakeLists.txt
PluginsBlueBerry/: PluginList.cmake
PluginsBlueBerry/org.blueberry.core.commands/: files.cmake
PluginsBlueBerry/org.blueberry.core.jobs/: CMakeLists.txt
PluginsBlueBerry/org.blueberry.core.runtime/: CMakeLists.txt  target_libraries.cmake
PluginsBlueBerry/org.blueberry.ui.qt/: CMakeLists.txt
PluginsBlueBerry/org.blueberry.ui.qt.help/src/internal/: berryHelpWebView.h
PluginsBlueBerry/org.blueberry.ui.qt.log/: files.cmake
Utilities/DGraph/: CMakeLists.txt
Utilities/itkCommon/: CMakeLists.txt  files.cmake  itkCommonConfig.cmake.in
Utilities/itkCommon/include/: itkExceptionObject.h  itkIndent.h  itkMacro.h  itkWin32Header.h
Utilities/itkCommon/src/: itkExceptionObject.cxx  itkIndent.cxx
Utilities/mbilog/: CMakeLists.txt  mbilogConfig.cmake.in
Utilities/mitkCore/: CMakeLists.txt
Utilities/mitkCore/src/IO/: mitkLog.cpp
Utilities/qtsingleapplication/: CMakeLists.txt
